- Transformation script can be run on aggregated DCIs
- Unknown SNMP trap sources can be automatically added as nodes
- Syslog processing optinmized for performance
- Default shared secret for agents can be configured
- Driver for Ping3 devices
- Driver for Allied Telesis switches
- Agent installer on Windows automatically adds firewall exception
- Database migration tool
- Management console:
	- New command line option -fullscreen
	- Option to draw borders around each value in "gauge" dashboard elements
	- Sorting by value in "Last Values" view takes data type into consideration
	- "Nodes" tab in object details view for subnets and containers
	- "Address Map" tab in object details view for subnets
	- Czech and Russian localization
- Fixed issues: #150, #226, #307, #330, #362, #363, #364, #366, #367, #373, #378, 
                #384, #387, #390, $401, #410, #414, #416, #419, #439, #440


*
* 1.2.9
*

- Templates can be applied on clusters
- Filters for automaticaly populated network maps
- User-defined constants in NXSL
- New methods deleteColumn and deleteRow in NXSL class Table
- New NXSL functions: chr, ord
- HTTPS support in port checker subagent
- Added MIBs for Nortel/Trapeze Wireless security switches
- New MIBs: BAY-STACK-NOTIFICATIONS-MIB, SUN-HW-CTRL-MIB, SUN-HW-TRAP-MIB, 
            SUN-PLATFORM-MIB
- Management console:
	- New dashboard elements: status map and table value
- Fixed issues: #202, #300, #304, #305, #309, #311, #325, #327, #332, #334,
                #335, #336, #337, #338, #339, #340, #342


*
* 1.2.8
*

- Support for data collection using SM-CLP protocol
- Aggregated DCI values on cluster objects
- Transformation scripts for table DCIs
- Support for multi-column keys (instances) in table DCIs
- Implemented SNMP table DCIs
- Configurable DCI summary tables
- Default background color for new network maps made configurable
- Logged in users cannot be deleted
- Empty containters have "Normal" status instead of "Unknown"