@@ -18,6 +18,7 @@
 - Driver for Allied Telesis switches
 - Agent installer on Windows automatically adds firewall exception
 - Database migration tool
+- Additional parameters in Solaris platform sub-agent
 - Management console:
 	- New command line option -fullscreen
 	- Option to draw borders around each value in "gauge" dashboard elements
